# binaryclustering-rp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: BinaryMath.hpp  CellData.hpp  Clustering.hpp  Distance.hpp  DynamicBitset.hpp  Evaluation.hpp  Graph.hpp  Io.hpp  KNNGraph.hpp  Matrix.hpp  Preprocess.hpp  Similarity.hpp  StopWatch.hpp
scripts/: MassifDisp.py  QEstimate.py  QKestimations.py  RunMssif.py  TabulaMurisVis.py
scripts/CSVmanip/: CSVSize.py  CSVrowcolcount.py  FractionCSV.py  SimpleBinarize.py  TabulaMurisBin.py  TabulaSapiensBin.py
scripts/R/: SeuratSimpleRun.R  Seurat_runtime_experiment.R  comparing_metrics.R
src/: CmdRunner.cpp
